SERVER-46607 ignore MaxTimeMSExpire error on hedged reads

(cherry picked from commit a924cde8580dd00409a0c8296e81ff73709ad1a2)